# beater-memory

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
.claude/skills/review-pr/: SKILL.md
.github/workflows/: ci.yml
crates/beater-memory/: Cargo.toml
crates/beater-memory/src/: distill.rs  engine.rs  error.rs  eval.rs  graph.rs  imports.rs  lib.rs  model.rs  reconstruct.rs  route.rs  server.rs  store.rs  text.rs
docs/: public-http-contract.json
scripts/: check-public-http-contract.py  e2e-memory.sh
