[package]
name = "beater-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Agent-first memory primitives for Beater"

[dependencies]
axum.workspace = true
chrono.workspace = true
libc.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
anyhow.workspace = true
tower.workspace = true

[[bin]]
name = "beater-memory"
path = "src/bin/beater-memory.rs"

[dependencies.clap]
workspace = true
optional = true

[dependencies.anyhow]
workspace = true
optional = true

[features]
default = ["cli"]
cli = ["dep:anyhow", "dep:clap"]
